--- a/brightStafferapp/static/css/style.css
+++ b/brightStafferapp/static/css/style.css
@@ -3369,7 +3369,6 @@ body.tour-open .animated {
 }
 body {
   font-family: "open sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background-color: #2f4050;
   font-size: 13px;
   color: #676a6c;
   overflow-x: hidden;
@@ -3534,7 +3533,6 @@ video {
   #page-wrapper {
     position: inherit;
     margin: 0 0 0 240px;
-    min-height: 2002px;
   }
 }
 .title-action {
@@ -8274,11 +8272,10 @@ body.md-skin {
   #page-wrapper {
     position: inherit;
     margin: 0 0 0 220px;
-    min-height: 1200px;
   }
   .navbar-static-side {
     z-index: 2001;
-    position: absolute;
+    position: fixed;
     width: 220px;
   }
   .navbar-top-links .dropdown-messages,
@@ -8291,12 +8288,12 @@ body.md-skin {
   #page-wrapper {
     position: inherit;
     margin: 0 0 0 0;
-    min-height: 1000px;
+    /* min-height: 1000px; */
   }
   .body-small .navbar-static-side {
     display: none;
     z-index: 2001;
-    position: absolute;
+    position: fixed;
     width: 70px;
   }
   .body-small.mini-navbar .navbar-static-side {
@@ -8432,16 +8429,8 @@ div.dataTables_wrapper div.dataTables_filter {
     display: block;
     width: 240px;
   }
-  body
-  {
-    background-color: #2f4050 !important;
-  }
-  #page-wrapper
-  {
-    min-height: 1024px !important;
-  }
-}
 
+}
 
 @media (max-width: 767px)
 {
@@ -8519,4 +8508,11 @@ input[type=password]
 .logn-bg-color
 {
     background-color: #f3f3f4 !important;
+}
+.navbar-static-side{
+    background-color: #2f4050;
+    height: 100%;
+}
+.height-full{
+    height: 100%;
 }
